# python-chess-cpp

./: .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
python-interface/: CMakeLists.txt  chess.cpp  test.py
